--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>WEB PLAYER 7</title>
-  
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>PLAYER 7 — Sitio Oficial</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="PLAYER 7 — música electrónica / melodic techno. Escuchá los últimos lanzamientos, seguinos y contactanos." />
 
-<!-- Tipografía opcional (puedes quitar estas dos líneas si querés 100% nativo) -->
+<!-- Tipografía opcional -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
@@ -34,12 +24,19 @@
 
 *{box-sizing:border-box}
 html,body{height:100%}
+/* 🔧 nuevo: prevenir corrimientos horizontales */
+html,body{overflow-x:hidden}
+
 body{
-  margin:0; color:var(--txt); background: radial-gradient(1200px 600px at 10% 0%, #0f1930 0, #0b0f14 40%, #070a0f 100%) fixed,
-  linear-gradient(120deg, #0b0f14, #0b0f14);
+  margin:0; color:var(--txt);
+  background: radial-gradient(1200px 600px at 10% 0%, #0f1930 0, #0b0f14 40%, #070a0f 100%) fixed,
+              linear-gradient(120deg, #0b0f14, #0b0f14);
   font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   line-height:1.5;
 }
+
+/* 🔧 nuevo: media fluid para evitar desbordes */
+img,video,canvas,svg{max-width:100%; height:auto; display:block}
 
 /* efecto malla neón sutil */
 body::before{
@@ -179,6 +176,48 @@ body::before{
 /* FOOTER */
 footer{margin:40px 0 30px; text-align:center; color:var(--muted); font-size:.9rem}
 footer a{color:var(--acc1); text-decoration:none}
+
+/* 📱🔧 NUEVOS ajustes para móvil (<=768px) */
+@media (max-width:768px){
+  /* nav: que no apriete los links */
+  .nav .wrap{
+    flex-wrap:wrap;
+    gap:10px;
+  }
+  .nav .wrap > div:last-child{
+    width:100%;
+    display:flex; flex-wrap:wrap; gap:8px;
+  }
+  .nav a.link, .nav .btn{flex:1 1 auto; text-align:center}
+
+  /* hero: más compacto */
+  .hero{ padding:28px 16px 16px; gap:16px }
+  .hero h1{ font-size: clamp(1.6rem, 5.5vw, 2.2rem) }
+
+  /* secciones: respirito lateral */
+  .section{ padding:0 16px }
+
+  /* grid: una sola columna para que no se corte */
+  .grid{ grid-template-columns:1fr }
+  .grid .col-4, .grid .col-6, .grid .col-12{ grid-column: 1 / -1 }
+
+  /* tarjetas track: permitir salto en dos renglones y arte un poco menor */
+  .track{ flex-wrap:wrap }
+  .track .art{ width:72px; height:72px }
+  .track .actions{ width:100%; justify-content:flex-end }
+
+  /* embed: menos alto en pantallas pequeñas */
+  .embed{ height:260px }
+}
+
+/* 🧠 Extras útiles */
+@media (max-width:480px){
+  body{ font-size:15px }               /* tipografía un toque más grande */
+  .badge{ font-size:.78rem }
+}
+
+/* 🔧 textos muy largos/URLs no rompen el layout */
+.track .title, .social, .section, .hero, .para { overflow-wrap:anywhere }
 </style>
 </head>
 <body>
@@ -210,7 +249,6 @@ footer a{color:var(--acc1); text-decoration:none}
     <p>Proyecto electrónico con texturas ambientales y pegada de club. Seguí el viaje: lanzamientos, sesiones y próximas fechas.</p>
     <div class="socials" style="margin-top:14px">
       <a class="social" href="https://open.spotify.com/artist/5MV2vByeAhnyKB8NLMdEpU" target="_blank" rel="noopener" aria-label="Spotify">
-        <!-- icono spotify -->
         <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 1.9A10.1 10.1 0 1 0 22.1 12 10.1 10.1 0 0 0 12 1.9Zm4.63 14.58a.75.75 0 0 1-1.03.25 12.68 12.68 0 0 0-7.19-1.15.75.75 0 0 1-.22-1.48 14.13 14.13 0 0 1 8.03 1.28.75.75 0 0 1 .41 1.1Zm1.39-3.04a.95.95 0 0 1-1.3.31 16.29 16.29 0 0 0-9.24-1.51.95.95 0 0 1-.29-1.87 18.2 18.2 0 0 1 10.33 1.69.95.95 0 0 1 .5 1.38Zm.12-3.19a1.14 1.14 0 0 1-1.56.37c-3.2-1.86-7.2-2.28-11.84-1.25a1.14 1.14 0 1 1-.49-2.22c5.22-1.16 9.77-.67 13.26 1.45a1.14 1.14 0 0 1 .63 1.65Z"/></svg>
         Spotify
       </a>
@@ -237,14 +275,12 @@ footer a{color:var(--acc1); text-decoration:none}
         <small style="color:var(--muted)">Player 7 • 2025</small>
       </div>
       <div class="controls">
-        <button class="icon-btn" id="playBtn" title="Reproducir/Pausar" aria-label="Reproducir">
-          ▶
-        </button>
+        <button class="icon-btn" id="playBtn" title="Reproducir/Pausar" aria-label="Reproducir">▶</button>
         <a class="icon-btn" href="https://soundcloud.com/o-c-player-seven/x-p-l-a-n-e-t-radio-edit" target="_blank" rel="noopener" title="Abrir en SoundCloud" aria-label="SoundCloud">SC</a>
       </div>
     </div>
     <audio id="player" preload="none" crossorigin="anonymous">
-      <!-- Reemplaza por tu archivo MP3 o déjalo vacío para usar el embed de abajo -->
+      <!-- Reemplaza por tu archivo MP3 o deja vacío para usar el embed -->
       <!-- <source src="TU_ARCHIVO_MP3.mp3" type="audio/mpeg"/> -->
     </audio>
   </div>
@@ -253,7 +289,6 @@ footer a{color:var(--acc1); text-decoration:none}
 <!-- LANZAMIENTO (EMBED) -->
 <section id="lanzamiento" class="section">
   <h2>Escuchá el lanzamiento</h2>
-  <!-- Puedes reemplazar el iframe por uno de Spotify: https://open.spotify.com/embed/track/{id} -->
   <iframe class="embed"
     src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/o-c-player-seven/x-p-l-a-n-e-t-radio-edit&color=%2300f0ff&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true"
     allow="autoplay" loading="lazy"></iframe>
@@ -322,7 +357,7 @@ footer a{color:var(--acc1); text-decoration:none}
       <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 1.9A10.1 10.1 0 1 0 22.1 12 10.1 10.1 0 0 0 12 1.9Zm4.63 14.58a.75.75 0 0 1-1.03.25 12.68 12.68 0 0 0-7.19-1.15.75.75 0 0 1-.22-1.48 14.13 14.13 0 0 1 8.03 1.28.75.75 0 0 1 .41 1.1Zm1.39-3.04a.95.95 0 0 1-1.3.31 16.29 16.29 0 0 0-9.24-1.51.95.95 0 0 1-.29-1.87 18.2 18.2 0 0 1 10.33 1.69.95.95 0 0 1 .5 1.38Zm.12-3.19a1.14 1.14 0 0 1-1.56.37c-3.2-1.86-7.2-2.28-11.84-1.25a1.14 1.14 0 1 1-.49-2.22c5.22-1.16 9.77-.67 13.26 1.45a1.14 1.14 0 0 1 .63 1.65Z"/></svg>
       Spotify
     </a>
-    <a class="social" href="https://soundcloud.com/o-c-player-seven" target="_blank" rel="noopener"> <!-- soundcloud icon reused arriba -->
+    <a class="social" href="https://soundcloud.com/o-c-player-seven" target="_blank" rel="noopener">
       <svg viewBox="0 0 24 24" fill="currentColor"><path d="M17.5 9.5a4.5 4.5 0 0 1 4.5 4.5c0 1.93-1.24 3.56-2.96 4.16H6.26A3.76 3.76 0 0 1 2.5 14.4c0-1.86 1.32-3.43 3.09-3.75.35-2.35 2.39-4.15 4.83-4.15 1.68 0 3.17.84 4.06 2.12.75-.41 1.6-.62 2.52-.62Z"/></svg>
       SoundCloud
     </a>
@@ -371,15 +406,6 @@ document.querySelectorAll('[data-preview]').forEach(btn=>{
     });
   });
 });
-
-// Consejo: si tus imágenes no cargan en CodePen, asegurate que:
-// 1) El link comience con https:// y sea público.
-// 2) Si usas GitHub, pegá el link RAW del archivo (raw.githubusercontent.com/...)
-// 3) No uses rutas locales (C:\... o file://)
 </script>
-</body>
-</html>
-<!-- partial -->
-  
 </body>
 </html>
